evidence/full-chain/raw/aimami/1.2.1/windows-x64/frontend/frontend-contract-report.md
# Frontend Contract Report

Frontend root: `<证据库>/raw/aimami/1.2.1/windows-x64/frontend/dumped`
Text assets: 32
Source maps: 0
Source map refs: 0
Recovered source files: 0
Recovered source preferred: True
IPC commands: 129

## IPC Commands

### `activate_relay_provider`
- wrappers: activate
- argKeys: ide, providerId
- sources: minified
- files: assets/index-De7J35HL.js

### `apply_custom_instruction`
- wrappers: applyCustomInstruction
- argKeys: content, source, templateCode, templateTitle
- sources: minified
- files: assets/index-De7J35HL.js

### `begin_chatgpt_oauth_login`
- wrappers: beginChatgptOauthLogin
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `cancel_chatgpt_oauth_login`
- wrappers: cancelChatgptOauthLogin
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `cancel_voice_trigger_capture`
- wrappers: cancelVoiceTriggerCapture
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `capture_voice_trigger_key`
- wrappers: captureVoiceTriggerKey
- argKeys: style
- sources: minified
- files: assets/index-De7J35HL.js

### `check_update_installability`
- wrappers: checkUpdateInstallability
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `clean`
- wrappers: clean
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `clear_custom_instruction_block`
- wrappers: clearCustomInstructionBlock
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `configure_auto_switch`
- wrappers: configureAutoSwitch
- argKeys: threshold5hPercent, thresholdWeeklyPercent
- sources: minified
- files: assets/index-De7J35HL.js

### `confirm_pending_auto_switch`
- wrappers: confirmPendingAutoSwitch
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `confirm_pending_auto_switch_and_restart_codex`
- wrappers: confirmPendingAutoSwitchAndRestartCodex
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `deactivate_relay_provider`
- wrappers: deactivate
- argKeys: ide, providerId
- sources: minified
- files: assets/index-De7J35HL.js

### `default_debug_bundle_file_name`
- wrappers: defaultDebugBundleFileName
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `delete_relay_provider`
- wrappers: delete
- argKeys: providerId
- sources: minified
- files: assets/index-De7J35HL.js

### `delete_sessions`
- wrappers: deleteSessions
- argKeys: ids
- sources: minified
- files: assets/index-De7J35HL.js

### `delete_skill_backup`
- wrappers: deleteSkillBackup
- argKeys: id
- sources: minified
- files: assets/index-De7J35HL.js

### `detect_api_proxy_config`
- wrappers: detectApiProxyConfig
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `diagnose`
- wrappers: diagnose
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `dismiss_pending_auto_switch`
- wrappers: dismissPendingAutoSwitch
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `export_accounts_to_file`
- wrappers: exportAccountsToFile
- argKeys: accountKeys, targetPath
- sources: minified
- files: assets/index-De7J35HL.js

### `export_debug_bundle`
- wrappers: exportDebugBundle
- argKeys: targetPath
- sources: minified
- files: assets/index-De7J35HL.js

### `export_relay_config`
- wrappers: exportConfig
- argKeys: filePath, includeApiKeys
- sources: minified
- files: assets/index-De7J35HL.js

### `export_session_markdown`
- wrappers: exportSessionMarkdown
- argKeys: sessionId, targetPath
- sources: minified
- files: assets/index-De7J35HL.js

### `fetch_relay_models_draft`
- wrappers: fetchModelsDraft
- argKeys: input
- sources: minified
- files: assets/index-De7J35HL.js

### `focus_main_window`
- wrappers: focusMainWindow
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `force_kill_codex`
- wrappers: forceKillCodex
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `generate_voice_prompt`
- wrappers: generateVoicePrompt
- argKeys: asrDurationMs, asrEmotion, asrErrorCode, asrLanguage, asrModel, asrProvider, clipboardText, llmApiKey, llmBaseUrl, llmModel, llmProvider, promptOverride, rawText, selectedText, targetAppName, targetBundleId, templateId, templateKind, templateTitle
- sources: minified
- files: assets/index-De7J35HL.js

### `get_codex_router_auth_readiness`
- wrappers: getCodexRouterAuthReadiness
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_device_id`
- wrappers: getDeviceId
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_hotspot_enabled`
- wrappers: getHotspotEnabled
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_image_compat`
- wrappers: getImageCompat
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_mystery_unlock_grants`
- wrappers: getMysteryUnlockGrants
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_notification_client_state`
- wrappers: getNotificationClientState
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_relay_active`
- wrappers: getActive
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_relay_provider_quota`
- wrappers: getQuota
- argKeys: providerId
- sources: minified
- files: assets/index-De7J35HL.js

### `get_relay_proxy_status`
- wrappers: getProxyStatus
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_system_info`
- wrappers: getSystemInfo
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `get_usage_refresh_interval`
- wrappers: getUsageRefreshInterval
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `has_notch`
- wrappers: hasNotch
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `hotspot_ready`
- wrappers: hotspotReady
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `import_accounts_from_file`
- wrappers: importAccountsFromFile
- argKeys: filePath, overwriteExisting, selectedKeys
- sources: minified
- files: assets/index-De7J35HL.js

### `import_relay_config`
- wrappers: importConfig
- argKeys: filePath
- sources: minified
- files: assets/index-De7J35HL.js

### `import_skill`
- wrappers: importSkill
- argKeys: path
- sources: minified
- files: assets/index-De7J35HL.js

### `inject_voice_text`
- wrappers: injectVoiceText
- argKeys: expectedBundleId, text
- sources: minified
- files: assets/index-De7J35HL.js

### `load_bootstrap_state`
- wrappers: loadBootstrapState
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_change_analytics`
- wrappers: loadChangeAnalytics
- argKeys: range
- sources: minified
- files: assets/index-De7J35HL.js

### `load_custom_instruction_state`
- wrappers: loadCustomInstructionState
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_installed_skills`
- wrappers: loadInstalledSkills
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_mcp_servers`
- wrappers: loadMcpServers
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_pending_auto_switch`
- wrappers: loadPendingAutoSwitch
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_quota_history`
- wrappers: loadQuotaHistory
- argKeys: accountKey
- sources: minified
- files: assets/index-De7J35HL.js

### `load_relay_state`
- wrappers: loadState
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_session_analytics`
- wrappers: loadSessionAnalytics
- argKeys: range
- sources: minified
- files: assets/index-De7J35HL.js

### `load_sessions`
- wrappers: loadSessions
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_skill_backups`
- wrappers: loadSkillBackups
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_snapshot`
- wrappers: loadSnapshot
- argKeys: localOnly
- sources: minified
- files: assets/index-De7J35HL.js

### `load_token_analytics`
- wrappers: loadTokenAnalytics
- argKeys: range
- sources: minified
- files: assets/index-De7J35HL.js

### `load_tool_analytics`
- wrappers: loadToolAnalytics
- argKeys: range
- sources: minified
- files: assets/index-De7J35HL.js

### `load_usage_analytics`
- wrappers: loadUsageAnalytics
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_voice_asr_config`
- wrappers: loadVoiceAsrConfig
- argKeys: provider
- sources: minified
- files: assets/index-De7J35HL.js

### `load_voice_llm_config`
- wrappers: loadVoiceLlmConfig
- argKeys: provider
- sources: minified
- files: assets/index-De7J35HL.js

### `load_voice_processing_modes`
- wrappers: loadVoiceProcessingModes
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_voice_runtime_status`
- wrappers: loadVoiceRuntimeStatus
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `load_voice_workspace`
- wrappers: loadVoiceWorkspace
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `logout`
- wrappers: logout
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `merge_mystery_unlock_grants`
- wrappers: mergeMysteryUnlockGrants
- argKeys: grants
- sources: minified
- files: assets/index-De7J35HL.js

### `migrate_session_worktree`
- wrappers: migrateSessionWorktree
- argKeys: sessionId
- sources: minified
- files: assets/index-De7J35HL.js

### `open_path`
- wrappers: openPath
- argKeys: path
- sources: minified
- files: assets/index-De7J35HL.js

### `parse_aimami_deeplink`
- wrappers: parseDeeplink
- argKeys: url
- sources: minified
- files: assets/index-De7J35HL.js

### `preview_account_import`
- wrappers: previewAccountImport
- argKeys: filePath
- sources: minified
- files: assets/index-De7J35HL.js

### `preview_custom_instruction_apply`
- wrappers: previewCustomInstructionApply
- argKeys: content
- sources: minified
- files: assets/index-De7J35HL.js

### `rebuild_registry`
- wrappers: rebuildRegistry
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `refresh_single_account_usage`
- wrappers: refreshSingleAccountUsage
- argKeys: accountKey
- sources: minified
- files: assets/index-De7J35HL.js

### `refresh_usage_snapshot`
- wrappers: refreshUsageSnapshot
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_accounts`
- wrappers: removeAccounts
- argKeys: accountKeys
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_mcp_server`
- wrappers: removeMcpServer
- argKeys: name
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_skill`
- wrappers: removeSkill
- argKeys: id
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_voice_history_entry`
- wrappers: removeVoiceHistoryEntry
- argKeys: id
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_voice_mode_shortcut`
- wrappers: removeVoiceModeShortcut
- argKeys: modeId
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_voice_template`
- wrappers: removeVoiceTemplate
- argKeys: id
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_voice_vocabulary`
- wrappers: removeVoiceVocabulary
- argKeys: id
- sources: minified
- files: assets/index-De7J35HL.js

### `remove_voice_vocabulary_app_scope`
- wrappers: removeVoiceVocabularyAppScope
- argKeys: appBundleId
- sources: minified
- files: assets/index-De7J35HL.js

### `reorder_relay_providers`
- wrappers: reorderProviders
- argKeys: orderedIds
- sources: minified
- files: assets/index-De7J35HL.js

### `replace_voice_vocabulary_kind`
- wrappers: replaceVoiceVocabularyKind
- argKeys: appBundleId, appName, entries, kind, notes, replacement, source
- sources: minified
- files: assets/index-De7J35HL.js

### `request_accessibility_permission`
- wrappers: requestAccessibilityPermission
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `request_voice_permissions`
- wrappers: requestVoicePermissions
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `resolve_voice_vocabulary_app_info`
- wrappers: resolveVoiceVocabularyAppInfo
- argKeys: path
- sources: minified
- files: assets/index-De7J35HL.js

### `restart_codex`
- wrappers: restartCodex, restartCodexApp
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `restore_skill_backup`
- wrappers: restoreSkillBackup
- argKeys: id
- sources: minified
- files: assets/index-De7J35HL.js

### `reveal_relay_api_key`
- wrappers: revealApiKey
- argKeys: providerId
- sources: minified
- files: assets/index-De7J35HL.js

### `rollback_custom_instruction`
- wrappers: rollbackCustomInstruction
- argKeys: historyId
- sources: minified
- files: assets/index-De7J35HL.js

### `run_daemon_once`
- wrappers: runDaemonOnce
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `save_voice_asr_config`
- wrappers: saveVoiceAsrConfig
- argKeys: asrApiKey, asrBaseUrl, asrModel, asrProvider
- sources: minified
- files: assets/index-De7J35HL.js

### `save_voice_llm_config`
- wrappers: saveVoiceLlmConfig
- argKeys: llmApiKey, llmBaseUrl, llmModel, llmProvider
- sources: minified
- files: assets/index-De7J35HL.js

### `save_voice_processing_modes`
- wrappers: saveVoiceProcessingModes
- argKeys: modes
- sources: minified
- files: assets/index-De7J35HL.js

### `set_api_proxy_config`
- wrappers: setApiProxyConfig
- argKeys: mode, url
- sources: minified
- files: assets/index-De7J35HL.js

### `set_auto_switch`
- wrappers: setAutoSwitch
- argKeys: enabled
- sources: minified
- files: assets/index-De7J35HL.js

### `set_codex_router_enabled`
- wrappers: setCodexRouterEnabled
- argKeys: enabled, relaunch
- sources: minified
- files: assets/index-De7J35HL.js

### `set_codex_router_no_account_mode`
- wrappers: setCodexRouterNoAccountMode
- argKeys: enabled, relaunch
- sources: minified
- files: assets/index-De7J35HL.js

### `set_hotspot_enabled`
- wrappers: setHotspotEnabled
- argKeys: enabled
- sources: minified
- files: assets/index-De7J35HL.js

### `set_image_compat`
- wrappers: setImageCompat
- argKeys: enabled
- sources: minified
- files: assets/index-De7J35HL.js

### `set_mcp_server_enabled`
- wrappers: setMcpServerEnabled
- argKeys: enabled, name
- sources: minified
- files: assets/index-De7J35HL.js

### `set_relay_provider_network`
- wrappers: setProviderNetwork
- argKeys: network, providerId
- sources: minified
- files: assets/index-De7J35HL.js

### `set_usage_refresh_interval`
- wrappers: setUsageRefreshInterval
- argKeys: interval
- sources: minified
- files: assets/index-De7J35HL.js

### `set_voice_global_shortcut`
- wrappers: setVoiceGlobalShortcut
- argKeys: shortcut
- sources: minified
- files: assets/index-De7J35HL.js

### `set_voice_mode_shortcut`
- wrappers: setVoiceModeShortcut
- argKeys: keyCode, keyKind, keyLabel, modeId, modifierMask, style
- sources: minified
- files: assets/index-De7J35HL.js

### `set_voice_overlay_style`
- wrappers: setVoiceOverlayStyle
- argKeys: style
- sources: minified
- files: assets/index-De7J35HL.js

### `set_voice_processing_mode_id`
- wrappers: setVoiceProcessingModeId
- argKeys: modeId, processingMode
- sources: minified
- files: assets/index-De7J35HL.js

### `set_voice_trigger_bindings`
- wrappers: setVoiceTriggerBindings
- argKeys: activeStyle, holdKeyCode, holdKeyKind, holdKeyLabel, holdModifierMask, toggleKeyCode, toggleKeyKind, toggleKeyLabel, toggleModifierMask
- sources: minified
- files: assets/index-De7J35HL.js

### `set_voice_trigger_key`
- wrappers: setVoiceTriggerKey
- argKeys: keyCode, keyKind, keyLabel, modifierMask, style
- sources: minified
- files: assets/index-De7J35HL.js

### `set_voice_trigger_listener_suppressed`
- wrappers: setVoiceTriggerListenerSuppressed
- argKeys: suppressed
- sources: minified
- files: assets/index-De7J35HL.js

### `show_voice_search_overlay`
- wrappers: showVoiceSearchOverlay
- argKeys: output, query
- sources: minified
- files: assets/index-De7J35HL.js

### `start_voice_capture`
- wrappers: startVoiceCapture
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `stop_voice_capture`
- wrappers: stopVoiceCapture
- argKeys: -
- sources: minified
- files: assets/index-De7J35HL.js

### `switch_account`
- wrappers: switchAccount
- argKeys: accountKey
- sources: minified
- files: assets/index-De7J35HL.js

### `switch_account_and_restart_codex`
- wrappers: switchAccountAndRestartCodex
- argKeys: accountKey
- sources: minified
- files: assets/index-De7J35HL.js

### `test_api_proxy_config`
- wrappers: testApiProxyConfig
- argKeys: mode, url
- sources: minified
- files: assets/index-De7J35HL.js

### `test_voice_asr_config`
- wrappers: testVoiceAsrConfig
- argKeys: asrApiKey, asrBaseUrl, asrModel, asrProvider
- sources: minified
- files: assets/index-De7J35HL.js

### `test_voice_llm_config`
- wrappers: testVoiceLlmConfig
- argKeys: llmApiKey, llmBaseUrl, llmModel, llmProvider
- sources: minified
- files: assets/index-De7J35HL.js

### `update_voice_runtime_settings`
- wrappers: updateVoiceRuntimeSettings
- argKeys: enabled, processingMode, processingModeId, shortcut, speechModel
- sources: minified
- files: assets/index-De7J35HL.js

### `upload_debug_report`
- wrappers: uploadDebugReport
- argKeys: input
- sources: minified
- files: assets/index-De7J35HL.js

### `upsert_mcp_server`
- wrappers: upsertMcpServer
- argKeys: args, environment, headers
- sources: minified
- files: assets/index-De7J35HL.js

### `upsert_relay_provider`
- wrappers: upsert
- argKeys: input
- sources: minified
- files: assets/index-De7J35HL.js

### `upsert_voice_template`
- wrappers: upsertVoiceTemplate
- argKeys: content, description, id, title
- sources: minified
- files: assets/index-De7J35HL.js

### `upsert_voice_vocabulary`
- wrappers: upsertVoiceVocabulary
- argKeys: appBundleId, appName, id, kind, notes, replacement, source
- sources: minified
- files: assets/index-De7J35HL.js

### `upsert_voice_vocabulary_app_scope`
- wrappers: upsertVoiceVocabularyAppScope
- argKeys: bundleId, name, path
- sources: minified
- files: assets/index-De7J35HL.js

### `voice_processing_done`
- wrappers: notifyVoiceProcessingDone
- argKeys: sessionGeneration
- sources: minified
- files: assets/index-De7J35HL.js

### `write_client_debug_log`
- wrappers: writeClientDebugLog
- argKeys: event
- sources: minified
- files: assets/index-De7J35HL.js

